
idf_component_register( SRCS 
							"freertos-addons-master/c++/Source/ccondition_variable.cpp"
							"freertos-addons-master/c++/Source/cevent_groups.cpp"
							"freertos-addons-master/c++/Source/cmem_pool.cpp"
							"freertos-addons-master/c++/Source/cmutex.cpp"
							"freertos-addons-master/c++/Source/cqueue.cpp"
							"freertos-addons-master/c++/Source/cread_write_lock.cpp"
							"freertos-addons-master/c++/Source/csemaphore.cpp"
							"freertos-addons-master/c++/Source/ctasklet.cpp"
							"freertos-addons-master/c++/Source/cthread.cpp"
							"freertos-addons-master/c++/Source/ctickhook.cpp"
							"freertos-addons-master/c++/Source/ctimer.cpp"
							"freertos-addons-master/c++/Source/cworkqueue.cpp"
                        INCLUDE_DIRS
                            "freertos-addons-master"
                            "freertos-addons-master/c++/Source/include" )
